traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: not found: value getMondeLargeur
    case (getMondeLargeur(),getMondeHauteur()) => ecritMessage(cpt)
          ^TraversalByColumn:3: error: not found: value getMondeHauteur
    case (getMondeLargeur(),getMondeHauteur()) => ecritMessage(cpt)
                            ^TraversalByColumn:4: error: not found: value getMondeLargeur
    case (getMondeLargeur(),_) => getY() match {
          ^TraversalByColumn:5: error: not found: value Direction
      case 0 => ecritMessage(cpt); while(!(getDirection()==Direction.SOUTH)){gauche()}; cpt=cpt + 1 ; avance()
                                                           ^TraversalByColumn:8: error: not found: value getMondeHauteur
    case (_,getMondeHauteur()) => ecritMessage(cpt); cpt= cpt + 1; gauche();avance();droite(); for (i <-1 to getMondeLargeur()) {recule()}
            ^